# robot-mouth

./: CMakeLists.txt  package.xml
include/: RobotMouthPerception.hpp
src/: RobotMouthPerception.cpp  main.cpp  mouth_api.py  mouth_serial.py  simulate_chewing.py
